# nautobot-app-device-lifecycle-mgmt

./: .cookiecutter.json  .dockerignore  .flake8  .gitignore  .pydocstyle.ini  .readthedocs.yaml  .travis.yml  .yamllint.yml  CHANGELOG.md  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  main.yml  publish.yml  upstream_testing.yml
changes/: +codeowners.housekeeping  +link.documentation  +poetry.housekeeping  255.fixed  261.changed  290.fixed  299.fixed  306.fixed  312.changed  313.fixed  320.fixed  323.housekeeping  325.added  325.changed  328.added  337.added  337.enhancement  341.added  343.fixed  344.added  346.documentation  348.added  351.fixed  353.added  353.fixed  354.fixed  360.added  360.fixed  366.housekeeping  367.added  367.housekeeping  375.housekeeping  383.housekeeping  393.added  403.changed  404.added  404.changed  405.added  410.housekeeping  430.housekeeping  (+42 more)
development/: Dockerfile  creds.example.env  dev.env  development.env  development_mysql.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.mysql.yml  docker-compose.postgres.yml  docker-compose.redis.yml  docker-compose.requirements.yml  docker-compose.yml  nautobot_config.py  towncrier_template.j2
docs/: add_information.md  cve_tracking.md  plugin_upgrade.md  requirements.txt  software_lifecycle.md
docs/admin/: compatibility_matrix.md  install.md  migrating_to_v3.md  uninstall.md  upgrade.md
docs/admin/release_notes/: index.md  version_0.1.md  version_0.2.md  version_0.3.md  version_0.4.md  version_1.0.md  version_1.1.md  version_1.2.md  version_1.3.md  version_1.6.md  version_2.0.md  version_2.1.md  version_2.2.md  version_3.0.md  version_3.1.md  version_3.2.md  version_4.0.md  version_4.1.md  version_4.2.md
docs/dev/: arch_decision.md  contributing.md  dev_environment.md  extending.md  release_checklist.md
docs/dev/code_reference/: api.md  models.md  package.md
docs/images/: install_from_repo.md
docs/models/: hardwarelcm.md
docs/user/: app_getting_started.md  app_overview.md  app_use_cases.md  cve_tracking.md  external_interactions.md  faq.md  lifecycle_reporting.md  metrics.md  software_lifecycle.md
eox_notices/: __init__.py  admin.py  filters.py  forms.py  models.py  navigation.py  signals.py  tables.py  template_content.py  urls.py  views.py
eox_notices/api/: __init__.py  serializers.py  urls.py  views.py
eox_notices/migrations/: 0001_initial.py
eox_notices/templates/eox_notices/: eox_notice_delete.html  eoxnotice.html  eoxnotice_list.html
eox_notices/tests/: __init__.py  test_api.py  test_basic.py  test_filters.py  test_forms.py  test_model.py  test_views.py
nautobot_device_lifecycle_mgmt/: __init__.py  admin.py  app-config-schema.json  banner.py  choices.py  const.py  contract_filters.py  filter_extensions.py  filters.py  forms.py  helpers.py  jobs.py  metrics.old.py  metrics.py  models.py  navigation.py  signals.py  software.py  software_filters.py  tables.py  template_content.py  urls.py  utils.py  views.py  viewsets.py
nautobot_device_lifecycle_mgmt/api/: __init__.py  nested_serializers.py  serializers.py  urls.py  views.py
nautobot_device_lifecycle_mgmt/graphql/: types.py
nautobot_device_lifecycle_mgmt/jobs/: __init__.py  cve_tracking.py  lifecycle_reporting.py  model_migration.py
nautobot_device_lifecycle_mgmt/management/commands/: fix_cve_severities.py  generate_app_test_data.py  generate_dlm_test_data.py
nautobot_device_lifecycle_mgmt/migrations/: 0001_hardwarelcm.py  0001_initial.py  0002_softwarelcm.py  0002_softwarelcm_validatedsoftwarelcm.py  0003_maintenancecontracts.py  0003_service_contracts.py  0004_squash__0004_0014_0015_0016.py  0004_validated_software_m2m.py  0005_reporting_models.py  0005_software_reporting.py  0006_auto_20211129_1643.py  0006_cvelcm.py  0006_cvelcm_vulnerabilitylcm.py  0006_softwareimage.py  0007_auto_20211130_0907.py  0007_auto_20220126_1905.py  0007_softwareimagelcm.py  0008_software_image_data_migration.py  0009_software_remove_image_fields.py  0010_auto_20230407_1514.py  0010_auto_20230414_1537.py  0010_cvelcm_last_modified_date.py  0010_softwareimagelcm_hash_algorithm.py  0011_add_valid_software_field_to_result.py  0011_validatedsoftwarelcm_alias.py  0012_add_related_name_to_results_model.py  0013_alter_softwareimagelcm_device_types.py  0013_pre_nautobot_v2_migrations.py  0014_auto_20240427_1916.py  0014_hardwarereplacement.py  0014_pre_nautobot_v2_migrations.py  0014_role_migration.py  0015_role_migration.py  0015_role_migration_cleanup.py  0016_role_migration_cleanup.py  0017_alter_vulnerabilitylcm_unique_together.py  0017_post_nautobot_v2_migrations.py  0017_set_default_on_text_fields.py  0017_text_fields_default_and_new_m2m_fields.py  0018_auto_20230825_1309.py  (+64 more)
nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/: contactlcm.html  contractlcm.html  contractlcm_devices.html  contractlcm_inventoryitems.html  contractlcm_retrieve.html  cvelcm.html  cvelcm_retrieve.html  (+46 more)
nautobot_device_lifecycle_mgmt/tests/: __init__.py  conftest.py  fixtures.py  test_api.py  test_api_views.py  test_basic.py  test_filter_hardwarelcm.py  test_filters.py  test_forms.py  test_jobs.py  test_management_commands.py  test_metrics.py  test_model.py  test_model_hardwarelcm.py  test_models.py  test_software_filters.py  test_utils.py  test_views.py
nautobot_plugin_device_lifecycle_mgmt/: __init__.py  admin.py  const.py  filters.py  forms.py  models.py  navigation.py  signals.py  tables.py  template_content.py  urls.py  views.py
nautobot_plugin_device_lifecycle_mgmt/api/: nested_serializers.py  serializers.py  urls.py  views.py
nautobot_plugin_device_lifecycle_mgmt/graphql/: types.py
nautobot_plugin_device_lifecycle_mgmt/migrations/: 0001_initial.py
nautobot_plugin_device_lifecycle_mgmt/tests/: test_api.py  test_filters.py  test_forms.py  test_model.py  test_views.py
(+19 files in other folders)
